// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sliderField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-4:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-4[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-4[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-4::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-moz-range-thumb:hover,
.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-4::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-webkit-slider-thumb:hover,
.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="emotion-4 emotion-5"
              data-direction="column"
              data-error="false"
              id="_r_0_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-4[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-4[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-4[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-4::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-moz-range-thumb:hover,
.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  border: null;
}

.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

.emotion-4::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: not-allowed;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-webkit-slider-thumb:hover,
.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  border: null;
}

.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  box-shadow: null;
  cursor: not-allowed;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="Slider Input"
        class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              0
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-disabled="true"
              aria-label="Slider Input"
              class="emotion-4 emotion-5"
              data-direction="column"
              data-error="false"
              disabled=""
              id="_r_q_"
              max="100"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values 1`] = `
<DocumentFragment>
  .emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  min-width: 2.5rem;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-4:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-4[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-4[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-4::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-moz-range-thumb:hover,
.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-4::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-webkit-slider-thumb:hover,
.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 1rem;
}

.emotion-6[data-double='true'] {
  margin-top: 2.5rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 0%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-8[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-8[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 16.666666666666668%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-10[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-10[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 33.333333333333336%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-12[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-12[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-14[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-14[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 66.66666666666667%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-16[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-16[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 83.33333333333333%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-18[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-18[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 100%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-20[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-20[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
        data-options="true"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          >
            <span
              class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              data-testid="slider-value"
              style="--uv_qabug40: right;"
            >
              1
            </span>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="emotion-4 emotion-5"
              data-direction="column"
              data-error="false"
              id="_r_3_"
              max="6"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
            <datalist
              class="emotion-6 emotion-7"
              data-double="false"
            >
              <span
                class="emotion-8 emotion-9"
                data-element-left="true"
                data-element-right="false"
                data-value="0"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  1Mb
                </p>
              </span>
              <span
                class="emotion-10 emotion-9"
                data-element-left="false"
                data-element-right="false"
                data-value="1"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  3Mb
                </p>
              </span>
              <span
                class="emotion-12 emotion-9"
                data-element-left="false"
                data-element-right="false"
                data-value="2"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  5Mb
                </p>
              </span>
              <span
                class="emotion-14 emotion-9"
                data-element-left="false"
                data-element-right="false"
                data-value="3"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  10Mb
                </p>
              </span>
              <span
                class="emotion-16 emotion-9"
                data-element-left="false"
                data-element-right="false"
                data-value="4"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  50Mb
                </p>
              </span>
              <span
                class="emotion-18 emotion-9"
                data-element-left="false"
                data-element-right="false"
                data-value="5"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  100Mb
                </p>
              </span>
              <span
                class="emotion-20 emotion-9"
                data-element-left="false"
                data-element-right="true"
                data-value="6"
              >
                <p
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  500Mb
                </p>
              </span>
            </datalist>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should render correctly with possible values and double 1`] = `
<DocumentFragment>
  .emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 0.5rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-8 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 0.5rem;
  width: 100%;
  min-width: 13.75rem;
  border-radius: 0.25rem;
  background: #e9eaeb;
}

.emotion-10 {
  position: absolute;
  height: 100%;
  background-color: #8c40ef;
  border-radius: 0.25rem;
}

.emotion-10[data-error='true'] {
  background-color: #e51963;
}

.emotion-10[aria-disabled='true'] {
  background-color: #d8c5fc;
}

.emotion-12 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-12:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-12::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-12::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -8px;
}

.emotion-12::-moz-range-thumb:hover,
.emotion-12::-moz-range-thumb:active,
.emotion-12::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-12::-moz-range-thumb:active,
.emotion-12::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-12::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-12:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-12::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -8px;
}

.emotion-12::-webkit-slider-thumb:hover,
.emotion-12::-webkit-slider-thumb:active,
.emotion-12::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-12::-webkit-slider-thumb:active,
.emotion-12::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-14 {
  position: absolute;
  width: 100%;
  pointer-events: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  background: transparent;
  outline: none;
}

.emotion-14:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-14:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-14::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-14::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(100% - 8px);
  top: -8px;
}

.emotion-14::-moz-range-thumb:hover,
.emotion-14::-moz-range-thumb:active,
.emotion-14::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-14::-moz-range-thumb:active,
.emotion-14::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-14::-ms-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-14:focus::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-14::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(100% - 8px);
  top: -8px;
}

.emotion-14::-webkit-slider-thumb:hover,
.emotion-14::-webkit-slider-thumb:active,
.emotion-14::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-14::-webkit-slider-thumb:active,
.emotion-14::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-16 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 1rem;
}

.emotion-16[data-double='true'] {
  margin-top: 2.5rem;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 0%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-18[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-18[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 16.666666666666668%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-20[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-20[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 33.333333333333336%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-22[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-22[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 50%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-24[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-24[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 66.66666666666667%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-26[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-26[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 83.33333333333333%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-28[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-28[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  white-space: nowrap;
  left: 100%;
  position: absolute;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.emotion-30[data-element-left='true'] {
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-30[data-element-right='true'] {
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52uj uv_toi52u5d"
        data-double="true"
        data-options="true"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            style="--uv_4k0ekn0: 100%;"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u6p"
            >
              <span
                class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-left"
                style="--uv_qabug40: right;"
              >
                1
              </span>
              <span
                class="emotion-2 emotion-3 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                data-testid="value-right"
                style="--uv_qabug40: right;"
              >
                500
              </span>
            </div>
            <div
              class="emotion-6 emotion-7"
            >
              <div
                class="emotion-8 emotion-9"
              >
                <div
                  aria-disabled="false"
                  class="emotion-10 emotion-11"
                  data-error="false"
                  style="left: 0%; right: 0%;"
                />
              </div>
              <input
                aria-label="test"
                class="emotion-12 emotion-13"
                data-direction="column"
                data-testid="handle-left"
                id="_r_d_"
                max="6"
                min="0"
                name="test"
                step="1"
                type="range"
                value="0"
              />
              <input
                aria-label="test"
                class="emotion-14 emotion-13"
                data-direction="column"
                data-testid="handle-right"
                id="_r_d_"
                max="6"
                min="0"
                name="test"
                step="1"
                type="range"
                value="6"
              />
              <datalist
                class="emotion-16 emotion-17"
                data-double="true"
              >
                <span
                  class="emotion-18 emotion-19"
                  data-element-left="true"
                  data-element-right="false"
                  data-value="0"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    1Mb
                  </p>
                </span>
                <span
                  class="emotion-20 emotion-19"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="1"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    3Mb
                  </p>
                </span>
                <span
                  class="emotion-22 emotion-19"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="2"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    5Mb
                  </p>
                </span>
                <span
                  class="emotion-24 emotion-19"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="3"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    10Mb
                  </p>
                </span>
                <span
                  class="emotion-26 emotion-19"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="4"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    50Mb
                  </p>
                </span>
                <span
                  class="emotion-28 emotion-19"
                  data-element-left="false"
                  data-element-right="false"
                  data-value="5"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                  >
                    100Mb
                  </p>
                </span>
                <span
                  class="emotion-30 emotion-19"
                  data-element-left="false"
                  data-element-right="true"
                  data-value="6"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9ow9 uv_m4c9owi uv_m4c9oww uv_m4c9ow1b uv_m4c9ow1c uv_m4c9ow3c"
                  >
                    500Mb
                  </p>
                </span>
              </datalist>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`sliderField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0[data-options='true'][data-double='true'] {
  margin-bottom: 1.5rem;
}

.emotion-2 {
  min-width: 2.5rem;
}

.emotion-4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  height: 0.5rem;
  width: 100%;
  position: relative;
  background-color: #e9eaeb;
  border-radius: 0.25rem;
  background-image: linear-gradient(#8c40ef, #8c40ef);
  background-repeat: no-repeat;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  outline: none;
}

.emotion-4:focus::-moz-range-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4:focus::-webkit-slider-thumb {
  border: 1.5px solid #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-4[data-error='true'] {
  background-image: linear-gradient(#e51963, #e51963);
}

.emotion-4[data-direction='column'] {
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
}

.emotion-4[aria-disabled='true'] {
  background-image: linear-gradient(#d8c5fc, #d8c5fc);
}

.emotion-4::-moz-range-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-moz-range-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-moz-range-thumb:hover,
.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-moz-range-thumb:active,
.emotion-4::-moz-range-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

.emotion-4::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  box-shadow: none;
  border: transparent;
  background: transparent;
}

.emotion-4::-webkit-slider-thumb {
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  pointer-events: all;
  width: 16px;
  height: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 2px 0px #22263829,0px 2px 4px 0px #2226381f;
  border-radius: 100%;
  border: none;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  position: absolute;
  left: calc(0% - 8px);
  top: -4px;
}

.emotion-4::-webkit-slider-thumb:hover,
.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  border: 1.5px solid #8c40ef;
}

.emotion-4::-webkit-slider-thumb:active,
.emotion-4::-webkit-slider-thumb:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
        data-options="false"
      >
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u6d"
        >
          <div
            class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
          >
            <div
              class="uv_toi52u0 uv_toi52u3j uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <label
                class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                for="_r_t_"
              >
                Test
              </label>
              <span
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
              >
                *
              </span>
            </div>
            <div
              class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div>
                <div
                  class="uv_1ce7gb6h uv_1ce7gb6n uv_1ce7gb6i"
                  data-controls="false"
                  data-disabled="false"
                  data-error="false"
                  data-size="small"
                  data-success="false"
                  data-unit="false"
                >
                  <div
                    class="uv_1ce7gb63 uv_1ce7gb64 uv_x6hyh50 uv_x6hyh52p uv_x6hyh561"
                    style="--uv_3mg8xe0: 1fr auto; --uv_3mg8xe1: 1fr auto; --uv_3mg8xe2: 1fr auto; --uv_3mg8xe3: 1fr auto; --uv_3mg8xe4: 1fr auto; --uv_3mg8xe5: 1fr auto;"
                  >
                    <input
                      aria-label="input"
                      class="uv_1ce7gb6b uv_1ce7gb6d uv_1ce7gb6g"
                      data-testid="slider-input"
                      id="_r_10_"
                      max="10"
                      min="0"
                      placeholder=""
                      step="1"
                      type="number"
                      value="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5v"
          />
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5j"
            style="--uv_4k0ekn0: 100%;"
          >
            <input
              aria-label="test"
              class="emotion-4 emotion-5"
              data-direction="column"
              data-error="false"
              id="_r_t_"
              max="10"
              min="0"
              name="test"
              step="1"
              style="background-size: 0% 100%;"
              tabindex="0"
              type="range"
              value="0"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
